--- a/img1.html
+++ b/img1.html
@@ -17,12 +17,13 @@
                 <div class="right-nav">
                   <ul>
                     <a href="index.html">
-                      <li>Home</li>
+                      <li>Homee</li>
                     </a>
                     <li>Posts</li>
                   </ul>
                 </div>
               </nav>
+
         </div>
     </header>
 
