--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
     <section>
       <div class="img_section max-container">
         <div class="card">
-          <img src="images/img1.avif" alt="Image" />
+          <a href="img1.html">
+            <img src="images/img1.avif" alt="Image" />
+          </a>
         </div>
         <div class="card">
           <img src="images/img2.avif" alt="Image" />
