--- a/index.html
+++ b/index.html
@@ -47,54 +47,82 @@
       <div class="img_section max-container">
         <div class="card">
           <a href="img1.html">
-            <img src="images/img1.avif" alt="Image" />
+            <img src="images/img1.jpg" alt="Image" />
+          </a>
+        </div>
+
+        <div class="card">
+          <a href="img2.html">
+            <img src="images/img2.jpg" alt="Image" />
           </a>
         </div>
         <div class="card">
-          <img src="images/img2.avif" alt="Image" />
+          <a href="img3.html">
+            <img src="images/img3.jpg" alt="Image" />
+          </a>
           
         </div>
         <div class="card">
-          <img src="images/img3.avif" alt="Image" />
-          
+          <a href="img4.html" >
+            <img src="images/img4.jpg" alt="Image" />
+          </a>
         </div>
-        <div class="card">
-          <img src="images/img4.avif" alt="Image" />
-        </div>
-        <div class="card">
-          <img src="images/img5.avif" alt="Image" />
-        </div>
-        <div class="card">
-          <img src="images/img6.avif" alt="Image" />
-        </div>
-        <div class="card">
-          <img src="images/img1.avif" alt="Image" />
-        </div>
-        <div class="card">
-          <img src="images/img2.avif" alt="Image" />
-        </div>
-        <div class="card">
-          <img src="images/img3.avif" alt="Image" />
-        </div>
-        <div class="card">
-          <img src="images/img4.avif" alt="Image" />
-        </div>
-        <div class="card">
-          <img src="images/img5.avif" alt="Image" />
-        </div>
-      <div class="card">
-          <img src="images/img6.avif" alt="Image" />
-    </div>
 
-    <div class="card">
-      <img src="images/img4.avif" alt="Image" />
-    </div>
-    <div class="card">
-      <img src="images/img5.avif" alt="Image" />
-    </div>
-  <div class="card">
-      <img src="images/img6.avif" alt="Image" />
- </div>
+        <div class="card">
+          <a href="img5.html">
+            <img src="images/img5.jpg" alt="Image" />
+          </a>
+        </div>
+        <div class="card">
+          <a href="img6.html">
+            <img src="images/img6.jpg" alt="Image" />
+          </a>
+        </div>
+        <div class="card">
+          <a href="img7.html">
+            <img src="images/img7.jpg" alt="Image" />
+          </a>
+        </div>
+        <div class="card">
+          <a href="img8.html">
+            <img src="images/img8.jpg" alt="Image" />
+          </a>
+        </div>
+        <div class="card">
+          <a href="img9.html">
+            <img src="images/img9.jpg" alt="Image" />
+          </a>
+        </div>
+        <div class="card">
+          <a href="img10.html">
+            <img src="images/img10.jpg" alt="Image" />
+          </a>
+        </div>
+        <div class="card">
+          <a href="img11.html">
+            <img src="images/img11.jpg" alt="Image" />
+          </a>
+        </div>
+        <div class="card">
+          <a href="img12.html">
+            <img src="images/img12.jpg" alt="Image" />
+          </a>
+        </div>
+        <div class="card">
+          <a href="img13.html">
+            <img src="images/img13.jpg" alt="Image" />
+          </a>
+        </div>
+        <div class="card">
+          <a href="img14.html">
+            <img src="images/img14.jpg" alt="Image" />
+          </a>
+        </div>
+        <div class="card">
+          <a href="img15.html">
+            <img src="images/img15.jpg" alt="Image" />
+          </a>
+        </div>
 
     </section>
   </body>
