--- a/img12.html
+++ b/img12.html
@@ -21,6 +21,7 @@
                   <a href="#">Go To</a>
                   <ul class="dropdown">
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="img1.html">Image 01</a></li>
                     <li><a href="img2.html">Image 02</a></li>
                     <li><a href="img3.html">Image 03</a></li>
                     <li><a href="img4.html">Image 04</a></li>
@@ -31,7 +32,6 @@
                     <li><a href="img9.html">Image 09</a></li>
                     <li><a href="img10.html">Image 10</a></li>
                     <li><a href="img11.html">Image 11</a></li>
-                    <li><a href="img12.html">Image 12</a></li>
                     <li><a href="img13.html">Image 13</a></li>
                     <li><a href="img14.html">Image 14</a></li>
                     <li><a href="img15.html">Image 15</a></li>
@@ -47,7 +47,7 @@
       <div class="max-container">
         <section>
           <div class="banner_image max-container">
-            <img src="images/img1.jpg" alt="banner" />
+            <img src="images/img12.jpg" alt="banner" />
           </div>
           <div class="about-author">
             <h3>Written by John doe</h3>
@@ -58,7 +58,7 @@
         <article>
           <h1>Finibus Bonorum et Malorum</h1>
           <p>
-            Image 01 dolor sit amet consectetur, adipisicing elit. Itaque
+            image 12 dolor sit amet consectetur, adipisicing elit. Itaque
             aspernatur harum culpa magni. Consequuntur accusamus eum corporis,
             omnis quis hic iste! Velit voluptate facere est blanditiis explicabo
             cupiditate accusamus saepe, animi rerum voluptates fugit aut at nam
