--- a/img2.html
+++ b/img2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Image 01 Info</title>
+    <title>Image 02 Info</title>
     <link rel="stylesheet" href="img.css" />
   </head>
   <body>
@@ -21,7 +21,7 @@
                   <a href="#">Go To</a>
                   <ul class="dropdown">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="img2.html">Image 02</a></li>
+                    <li><a href="img1.html">Image 01</a></li>
                     <li><a href="img3.html">Image 03</a></li>
                     <li><a href="img4.html">Image 04</a></li>
                     <li><a href="img5.html">Image 05</a></li>
@@ -47,7 +47,7 @@
       <div class="max-container">
         <section>
           <div class="banner_image max-container">
-            <img src="images/img1.jpg" alt="banner" />
+            <img src="images/img2.jpg" alt="banner" />
           </div>
           <div class="about-author">
             <h3>Written by John doe</h3>
@@ -58,7 +58,7 @@
         <article>
           <h1>Finibus Bonorum et Malorum</h1>
           <p>
-            Image 01 dolor sit amet consectetur, adipisicing elit. Itaque
+            image 2 dolor sit amet consectetur, adipisicing elit. Itaque
             aspernatur harum culpa magni. Consequuntur accusamus eum corporis,
             omnis quis hic iste! Velit voluptate facere est blanditiis explicabo
             cupiditate accusamus saepe, animi rerum voluptates fugit aut at nam
