--- a/img5.html
+++ b/img5.html
@@ -21,10 +21,10 @@
                   <a href="#">Go To</a>
                   <ul class="dropdown">
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="img1.html">Image 01</a></li>
                     <li><a href="img2.html">Image 02</a></li>
                     <li><a href="img3.html">Image 03</a></li>
                     <li><a href="img4.html">Image 04</a></li>
-                    <li><a href="img5.html">Image 05</a></li>
                     <li><a href="img6.html">Image 06</a></li>
                     <li><a href="img7.html">Image 07</a></li>
                     <li><a href="img8.html">Image 08</a></li>
@@ -47,7 +47,7 @@
       <div class="max-container">
         <section>
           <div class="banner_image max-container">
-            <img src="images/img1.jpg" alt="banner" />
+            <img src="images/img5.jpg" alt="banner" />
           </div>
           <div class="about-author">
             <h3>Written by John doe</h3>
@@ -58,7 +58,7 @@
         <article>
           <h1>Finibus Bonorum et Malorum</h1>
           <p>
-            Image 01 dolor sit amet consectetur, adipisicing elit. Itaque
+            image 5 dolor sit amet consectetur, adipisicing elit. Itaque
             aspernatur harum culpa magni. Consequuntur accusamus eum corporis,
             omnis quis hic iste! Velit voluptate facere est blanditiis explicabo
             cupiditate accusamus saepe, animi rerum voluptates fugit aut at nam
