--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
+    <!-- nav-section -->
   </head>
   <body>
     <div class="banner-section">
@@ -22,6 +23,8 @@
           </button>
         </div>
       </nav>
+
+      <!-- hero-section -->
       <div class="hero-section max-container">
         <h1><span>Alex</span> <span>Photon</span></h1>
         <p>
@@ -31,6 +34,8 @@
           Suspendisse imperdiet nisl id <a href="#">metus posuere mattis .</a>
         </p>
       </div>
+
+      <!-- button-section  -->
       <div class="hero-buttons">
         <button>All</button>
         <button>Art</button>
@@ -43,6 +48,7 @@
       </div>
     </div>
 
+    <!-- image-section  -->
     <section>
       <div class="img_section max-container">
         <div class="card">
@@ -123,7 +129,6 @@
             <img src="images/img15.jpg" alt="Image" />
           </a>
         </div>
-
     </section>
   </body>
 </html>
