--- a/img3.html
+++ b/img3.html
@@ -18,7 +18,9 @@
             <div class="dropdown-bar">
               <ul>
                 <li>
-                  <a href="#">Go To</a>
+                  <div class="go-to">
+                    <a href="#">Go To</a>
+                  </div>
                   <ul class="dropdown">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="img1.html">Image 01</a></li>
